--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,8 +1,6 @@
 @import "colors";
 
 footer {
-  padding-top: 20px;
-
   .footer-partners {
     width: 100%;
     background-color: #efefef;
